--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/proxy": "^1.3.3",
     "axios": "^0.19.2",
+    "cookieparser": "^0.1.0",
     "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0"
@@ -30,11 +31,5 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "scss-loader": "^0.0.1"
-  },
-  "config": {
-    "nuxt": {
-      "host": "0.0.0.0",
-      "port": "80"
-    }
   }
 }
