--- a/package.json
+++ b/package.json
@@ -31,5 +31,11 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "scss-loader": "^0.0.1"
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "3000"
+    }
   }
 }
