--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   },
   "config": {
     "nuxt": {
-      "host": "localhost",
-      "port": "3000"
+      "host": "0.0.0.0",
+      "port": "3389"
     }
   }
 }
